--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,3 +22,4 @@
 @import './layout/footer-join-us-block';
 @import './layout/_footer-subscribe-block';
 @import './layout/modal-window';
+@import './layout/menu';
