--- a/CSS/main.css
+++ b/CSS/main.css
@@ -36,9 +36,8 @@ a {
 
 img {
   display: block;
-  max-width: 100%;
   height: auto;
-  width: 100%;
+  max-width: 100%;
 }
 
 body {
@@ -60,6 +59,10 @@ body {
 
 .link {
   text-decoration: none;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
 
 .vissually-hidden {
@@ -129,13 +132,25 @@ body {
 }
 
 .header {
-  padding-top: 24px;
-  padding-bottom: 25px;
   border-bottom: 1px solid #ececec;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 .header > .container {
   display: flex;
   align-items: center;
+}
+@media screen and (min-width: 758px) {
+  .header {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header {
+    padding-top: 25px;
+    padding-bottom: 26px;
+  }
 }
 
 .navigation {
@@ -146,14 +161,25 @@ body {
 .logo {
   font-family: "Raleway";
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
+}
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.2;
+  }
 }
 
 .header--logo {
   color: var(--header-logo-color);
-  margin-right: 93px;
+  margin-right: 88px;
+}
+@media screen and (min-width: 1200px) {
+  .header--logo {
+    margin-right: 93px;
+  }
 }
 
 .footer--logo {
@@ -166,8 +192,19 @@ body {
 }
 
 .navigation__list {
-  display: flex;
-  gap: 50px;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .navigation__list {
+    display: flex;
+    gap: 50px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .navigation__list {
+    display: flex;
+    gap: 50px;
+  }
 }
 
 .navigation__link {
@@ -201,8 +238,21 @@ body {
 }
 
 .contact {
-  display: flex;
-  gap: 50px;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .contact {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contact {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+  }
 }
 
 .header__contact {
@@ -231,11 +281,38 @@ body {
 }
 
 .order-section {
-  padding: 200px 0;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main-background.jpg);
+  padding: 118px 0;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main-background-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .order-section {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main-background-mob-2x.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .order-section {
+    padding: 200px 0;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main-background-tab.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .order-section {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main-background-tab-2x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .order-section {
+    padding: 200px 0;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main-background.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .order-section {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main-background-2x.jpg);
+  }
 }
 
 .order {
@@ -246,7 +323,7 @@ body {
 
 .order-heading {
   font-weight: 900;
-  font-size: 44px;
+  font-size: 26px;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
@@ -255,11 +332,17 @@ body {
   margin-bottom: 30px;
   max-width: 700px;
 }
+@media screen and (min-width: 768px) {
+  .order-heading {
+    font-size: 44px;
+  }
+}
 
 .button {
   color: var(--service-btn-text);
   background-color: var(--service-btn-color);
   font-weight: 700;
+  font-size: 16px;
   border: none;
   width: 216px;
   height: 50px;
@@ -343,7 +426,18 @@ body {
 }
 
 .our-job-section {
-  padding-bottom: 94px;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .our-job-section {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .our-job-section {
+    display: block;
+    padding-bottom: 94px;
+  }
 }
 
 .our-job-header {
@@ -510,8 +604,14 @@ body {
 }
 
 .clients-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .clients-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .clients-heading {
@@ -522,25 +622,55 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--second-heading-color);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .clients-heading {
+    margin-bottom: 50px;
+  }
 }
 
 .clients {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.clients__item {
+  width: calc((100% - 30px) / 2);
+}
+@media screen and (min-width: 768px) {
+  .clients__item {
+    width: calc((100% - 60px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    width: calc((100% - 150px) / 6);
+  }
 }
 
 .clients__link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
+  width: 100%;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   transition-property: border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .clients__link {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__link {
+    width: 170px;
+  }
 }
 .clients__link:hover, .clients__link:focus {
   border-color: rgb(33, 150, 243);
@@ -557,18 +687,40 @@ body {
 }
 
 .filter-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .filter-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .filter {
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
-  justify-content: center;
+}
+@media screen and (min-width: 768px) {
+  .filter {
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
 }
 
 .portfolio__filter {
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .portfolio__filter {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio__filter {
+    margin-bottom: 50px;
+  }
 }
 
 .filter__button {
@@ -580,7 +732,7 @@ body {
   border: none;
   background: none;
   background-color: #f5f4fa;
-  padding: 6px 22px;
+  padding: 6px 25px;
   border-radius: 4px;
   cursor: pointer;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -599,7 +751,17 @@ body {
 }
 
 .example__item {
-  width: 370px;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .example__item {
+    max-width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .example__item {
+    width: 370px;
+  }
 }
 
 .example__link {
@@ -616,12 +778,15 @@ body {
 
 .example__description {
   position: absolute;
+  display: flex;
+  align-items: center;
+  padding-left: 24px;
+  padding-right: 24px;
   top: 0;
   left: 0;
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
   color: #ffffff;
-  padding: 63px 24px;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -629,13 +794,18 @@ body {
   letter-spacing: 0.03em;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  overflow: auto;
+  overflow: hidden;
 }
 .example__link:hover .example__description {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   transform: translateY(0%);
 }
-
+@media screen and (min-width: 768px) {
+  .example__description {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
 .example__works {
   padding: 20px 24px;
   border-left: 1px solid #eeeeee;
@@ -666,12 +836,36 @@ body {
   padding-bottom: 60px;
 }
 
-.footer-blocks {
-  display: flex;
+@media screen and (min-width: 1200px) {
+  .footer-blocks {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .desktop-upper-block {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 61px;
+    padding-right: 74px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .desktop-upper-block {
+    padding-right: 0;
+    padding-left: 0;
+  }
 }
 
 .address-block {
-  margin-right: 70px;
+  margin-bottom: 60px;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .address-block {
+    text-align: start;
+    margin-right: 70px;
+  }
 }
 
 .footer-web-logo {
@@ -730,7 +924,14 @@ body {
 }
 
 .join-us {
-  margin-right: 93px;
+  margin-bottom: 60px;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .join-us {
+    text-align: start;
+    margin-right: 93px;
+  }
 }
 
 .join-us__heading {
@@ -746,6 +947,7 @@ body {
 
 .join-us__list {
   display: flex;
+  justify-content: center;
   gap: 10px;
 }
 
@@ -770,6 +972,15 @@ body {
   fill: white;
 }
 
+.subscribe {
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .subscribe {
+    text-align: start;
+  }
+}
+
 .subscribe__heading {
   font-style: normal;
   font-weight: 700;
@@ -783,10 +994,36 @@ body {
 
 .subscribe__form {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__form {
+    flex-direction: row;
+  }
+}
+
+.subscribe__label {
+  width: 100%;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .subscribe__label {
+    width: 450px;
+    height: 50px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__label {
+    width: 358px;
+    height: 50px;
+    margin-bottom: 0;
+    margin-right: 12px;
+  }
 }
 
 .subscribe__email {
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -809,7 +1046,6 @@ body {
 }
 
 .button {
-  margin-left: 12px;
   color: var(--service-btn-text);
   background-color: var(--service-btn-color);
   font-weight: 700;
@@ -842,16 +1078,29 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  height: 581px;
+  width: 93%;
+  height: 81%;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 40px;
+  padding: 38px;
 }
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0);
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+    padding: 40px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .modal-close {
@@ -885,11 +1134,16 @@ body {
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--second-heading-color);
   margin-bottom: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .modal-title {
+    line-height: 1.15;
+  }
 }
 
 .modal-field {
@@ -910,7 +1164,7 @@ body {
 }
 
 .modal-field__input {
-  width: 448px;
+  width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -923,6 +1177,18 @@ body {
 }
 .modal-field__input:hover {
   cursor: pointer;
+}
+@media screen and (min-width: 480px) {
+  .modal-field__input {
+    width: 370px;
+    height: 40px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal-field__input {
+    width: 448px;
+    height: 40px;
+  }
 }
 
 .modal-field__icon {
@@ -970,13 +1236,17 @@ body {
 .policy__text {
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--description-color);
   display: flex;
-  align-items: center;
-  justify-content: center;
+}
+@media screen and (min-width: 1200px) {
+  .policy__text {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .policy__text span {
@@ -1014,4 +1284,156 @@ body {
 .upload-button {
   display: block;
   margin: 0 auto;
+}
+
+.menu-open {
+  margin-left: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  background: none;
+}
+@media screen and (min-width: 768px) {
+  .menu-open {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .menu-open {
+    display: none;
+  }
+}
+
+.mob-menu {
+  position: fixed;
+  z-index: 2;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 100vw;
+  height: 100vh;
+  left: 0;
+  background-color: #fff;
+  top: 0;
+}
+@media screen and (min-width: 768px) {
+  .mob-menu {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mob-menu {
+    display: none;
+  }
+}
+
+.container-mob {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 40px;
+  padding-right: 83px;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.menu-close {
+  display: block;
+  margin-left: auto;
+  margin-bottom: 8px;
+  border: none;
+  background: none;
+}
+@media screen and (min-width: 768px) {
+  .menu-close {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .menu-close {
+    display: none;
+  }
+}
+
+.menu-close__icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-close__icon:hover {
+  fill: #2196f3;
+}
+
+.menu-nav__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.menu-nav__link {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #212121;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-nav__link:hover {
+  color: #2196f3;
+}
+
+.menu-contact {
+  margin-bottom: 64px;
+}
+
+.menu-contact__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.menu-contact__tel-link {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 34px;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.menu-contact__mail-link {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.menu-soc {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.menu-soc_item:not(:last-child) {
+  padding-right: 8px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.menu-soc_item::before {
+  content: "";
+  position: absolute;
+  bottom: -32px;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #2196f3;
+}
+
+.menu-soc_link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  letter-spacing: 0.02em;
+  color: #2196f3;
 }/*# sourceMappingURL=main.css.map */
