--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -20,9 +20,9 @@ a {
 
 img {
   display: block;
-  max-width: 100%;
   height: auto;
-  width: 100%;
+  max-width: 100%;
+  // width: 100%;
 }
 
 body {
