--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -1,6 +1,15 @@
 .contact {
-  display: flex;
-  gap: 50px;
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+  }
 }
 
 .header__contact {
