--- a/sass/layout/_footer-subscribe-block.scss
+++ b/sass/layout/_footer-subscribe-block.scss
@@ -1,3 +1,10 @@
+.subscribe {
+  text-align: center;
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+  }
+}
+
 .subscribe__heading {
   font-style: normal;
   font-weight: 700;
@@ -11,10 +18,30 @@
 
 .subscribe__form {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+  }
+}
+
+.subscribe__label {
+  width: 100%;
+  margin-bottom: 20px;
+  @media screen and (min-width: 768px) {
+    width: 450px;
+    height: 50px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+    height: 50px;
+    margin-bottom: 0;
+    margin-right: 12px;
+  }
 }
 
 .subscribe__email {
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -39,7 +66,6 @@
 }
 
 .button {
-  margin-left: 12px;
   color: var(--service-btn-text);
   background-color: var(--service-btn-color);
   font-weight: 700;
