--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,10 +1,20 @@
 .header {
-  padding-top: 24px;
-  padding-bottom: 25px;
   border-bottom: 1px solid #ececec;
+  padding-top: 15px;
+  padding-bottom: 15px;
   > .container {
     display: flex;
     align-items: center;
+  }
+
+  @media screen and (min-width: 758px) {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 25px;
+    padding-bottom: 26px;
   }
 }
 
@@ -16,14 +26,21 @@
 .logo {
   font-family: 'Raleway';
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.2;
+  }
 }
 
 .header--logo {
   color: var(--header-logo-color);
-  margin-right: 93px;
+  margin-right: 88px;
+  @media screen and (min-width: 1200px) {
+    margin-right: 93px;
+  }
 }
 
 .footer--logo {
@@ -36,8 +53,16 @@
 }
 
 .navigation__list {
-  display: flex;
-  gap: 50px;
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    gap: 50px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    gap: 50px;
+  }
 }
 
 .navigation__link {
