--- a/sass/layout/_modal-window.scss
+++ b/sass/layout/_modal-window.scss
@@ -13,16 +13,27 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  height: 581px;
+  width: 93%;
+  height: 81%;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 40px;
+  padding: 38px;
   .backdrop.is-hidden & {
     transform: translate(-50%, -50%) scale(0);
+  }
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+    height: 609px;
+    padding: 40px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
   }
 }
 
@@ -57,11 +68,15 @@
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--second-heading-color);
   margin-bottom: 12px;
+
+  @media screen and (min-width: 1200px) {
+    line-height: 1.15;
+  }
 }
 
 .modal-field {
@@ -82,7 +97,7 @@
 }
 
 .modal-field__input {
-  width: 448px;
+  width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -94,6 +109,14 @@
   }
   &:hover {
     cursor: pointer;
+  }
+  @media screen and (min-width: 480px) {
+    width: 370px;
+    height: 40px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 448px;
+    height: 40px;
   }
 }
 
@@ -144,13 +167,17 @@
 .policy__text {
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--description-color);
   display: flex;
-  align-items: center;
-  justify-content: center;
+  // align-items: center;
+  // justify-content: center;
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .policy__text span {
