--- a/sass/layout/_order-section.scss
+++ b/sass/layout/_order-section.scss
@@ -1,10 +1,32 @@
 .order-section {
-  padding: 200px 0;
+  padding: 118px 0;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/main-background.jpg);
+    url(../images/main-background-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/main-background-mob-2x.jpg);
+  }
+  @media screen and (min-width: 768px) {
+    padding: 200px 0;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/main-background-tab.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/main-background-tab-2x.jpg);
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 200px 0;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/main-background.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/main-background-2x.jpg);
+    }
+  }
 }
 
 .order {
@@ -15,7 +37,7 @@
 
 .order-heading {
   font-weight: 900;
-  font-size: 44px;
+  font-size: 26px;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
@@ -23,12 +45,16 @@
   color: var(--main-header-color);
   margin-bottom: 30px;
   max-width: 700px;
+  @media screen and (min-width: 768px) {
+    font-size: 44px;
+  }
 }
 
 .button {
   color: var(--service-btn-text);
   background-color: var(--service-btn-color);
   font-weight: 700;
+  font-size: 16px;
   border: none;
   width: 216px;
   height: 50px;
