--- a/sass/layout/_our-job.scss
+++ b/sass/layout/_our-job.scss
@@ -1,5 +1,13 @@
 .our-job-section {
-  padding-bottom: 94px;
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+  @media screen and (min-width: 1200px) {
+    display: block;
+    padding-bottom: 94px;
+  }
 }
 
 .our-job-header {
