--- a/sass/layout/_portfolio-filter.scss
+++ b/sass/layout/_portfolio-filter.scss
@@ -1,16 +1,30 @@
 .filter-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .filter {
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
-  justify-content: center;
+  @media screen and (min-width: 768px) {
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
 }
 
 .portfolio__filter {
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
 .filter__button {
@@ -22,7 +36,8 @@
   border: none;
   background: none;
   background-color: #f5f4fa;
-  padding: 6px 22px;
+  padding: 6px 25px;
+
   border-radius: 4px;
   cursor: pointer;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
