--- a/sass/layout/_work-examples.scss
+++ b/sass/layout/_work-examples.scss
@@ -6,7 +6,13 @@
 }
 
 .example__item {
-  width: 370px;
+  width: 100%;
+  @media screen and (min-width: 768px) {
+    max-width: 354px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+  }
 }
 
 .example__link {
@@ -24,24 +30,35 @@
 
 .example__description {
   position: absolute;
+  display: flex;
+  align-items: center;
+  padding-left: 24px;
+  padding-right: 24px;
   top: 0;
   left: 0;
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
   color: #ffffff;
-  padding: 63px 24px;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
+
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  overflow: auto;
+  overflow: hidden;
   .example__link:hover & {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
     transform: translateY(0%);
+  }
+  @media screen and (min-width: 768px) {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+  @media screen and (min-width: 1200px) {
+    // padding: 63px 24px;
   }
 }
 
