--- a/sass/layout/_modal-window.scss
+++ b/sass/layout/_modal-window.scss
@@ -166,6 +166,8 @@
 
 .policy__text {
   font-style: normal;
+  align-items: center;
+  justify-content: center;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.16;
