--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -56,6 +56,14 @@
   color: var(--second-heading-color);
   margin-bottom: 10px;
   text-align: center;
+
+  @media screen and (min-width: 768px) {
+    text-align: start;
+  }
+
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+  }
 }
 
 .benefits__description {
