--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -77,9 +77,14 @@
   color: #212121;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:hover {
+  &:hover,
+  &:focus {
     color: #2196f3;
   }
+}
+
+.menu-nav__link.current-menu {
+  color: #2196f3;
 }
 
 .menu-contact {
